Bug 104482 - FILESAVE: saving progress status bar not displayed while saving
Summary: FILESAVE: saving progress status bar not displayed while saving
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.3.0.0.beta1
Hardware: All All
: medium trivial
Assignee: Not Assigned
URL:
Whiteboard: target:5.4.0 target:5.3.2
Keywords: bibisected, bisected, regression
: 105675 106025 (view as bug list)
Depends on:
Blocks: File-Progress-Bar
  Show dependency treegraph
 
Reported: 2016-12-08 05:41 UTC by Robert Gonzalez MX
Modified: 2019-08-22 12:42 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Gonzalez MX 2016-12-08 05:41:36 UTC
Description:
When a file is saved, the progress status bar at the bottom is not displayed as in LO 5.2.3.

Tested with Version: 5.4.0.0.alpha0+
Build ID: 33f5bc54aaa7fe7aa9335726e30f9c349155e04d
CPU Threads: 8; OS Version: Windows 6.2; UI Render: default; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2016-12-01_23:21:05
Locale: es-MX (es_MX); Calc: group
on Windows 10 and Windows XP SP3
Tested in Writer, Calc and Impress

Also with Version: 5.3.0.0.beta1+
Build ID: c7e7a634cf5941fffd97102fe4252aee7445e36b
CPU Threads: 8; OS Version: Windows 6.2; UI Render: default; Layout Engine: new; 
TinderBox: Win-x86@62-merge-TDF, Branch:libreoffice-5-3, Time: 2016-12-01_06:59:24
Locale: es-MX (es_MX); Calc: group


Steps to Reproduce:
1.Open any Writer, Calc or Impress file, the progres status bar at the botom displays when opening
2.Save the file, the progress status bar at the botom doesn't display while saving
3.

Actual Results:  
No especial or additional steps 

Expected Results:
The progres estatus bar should display while saving, especially with large files.


Reproducible: Always

User Profile Reset: No, the tests were made with 2 different PCs and a laptop.

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 10.0; WOW64; rv:50.0) Gecko/20100101 Firefox/50.0
Comment 1 Buovjaga 2016-12-11 17:27:42 UTC
Repro.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.4.0.0.alpha0+
Build ID: 1fce5b024e9f25c3fcef2537a22474ece0dc416f
CPU Threads: 8; OS Version: Linux 4.8; UI Render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on December 10th 2016
Comment 2 Aron Budea 2016-12-17 06:19:20 UTC
This doesn't seem to consistently happen during bibisecting, after a few steps I encountered one where the first save happened with progress bar, but further save had no progress bar.

I remember seeing an old bug report where someone was complaining save was blocking any activity on the document, maybe that was being addressed? (but this is just a vague thought, nothing more)
Comment 3 Xisco Faulí 2017-02-01 17:38:18 UTC
*** Bug 105675 has been marked as a duplicate of this bug. ***
Comment 4 Xisco Faulí 2017-02-14 16:32:38 UTC
Regression introduced by:

author	Jan-Marek Glogowski <glogow@fbihome.de>	2016-07-18 11:21:14 (GMT)
committer	Noel Grandin <noelgrandin@gmail.com>	2016-07-27 06:47:03 (GMT)
commit 9f4af777a832d8a0b9a21d793d421fa6228131e0 (patch)
tree 9775913d9946896a81b1fe2f4763b060c9d413cc
parent 9870f02b310567c1d50c8e11a49afea5fdc549a0 (diff)
Don't Update() and Flush() status bar draws
From reading the code of vcl::Window::Update, this already calls
Invalidate and Flush in case of top-level widgets and also handles
child windows.

And there is no need to invalidate the progress bar text, if we
just update the progress value.

Adding Cc: to Jan-Marek Glogowski
Comment 5 Xisco Faulí 2017-02-15 17:18:00 UTC
*** Bug 106025 has been marked as a duplicate of this bug. ***
Comment 6 Commit Notification 2017-02-22 16:42:52 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0b08eacd79a2133a07410dfb99bcc04bb9dd2199

tdf#104482 Force updating progress bar on safe

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2017-02-28 11:00:11 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b192cf7791aa7a218b0657715f4c4ad2adf5bb4d&h=libreoffice-5-3

tdf#104482 Force updating progress bar on safe

It will be available in 5.3.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Yousuf Philips (jay) (retired) 2017-06-16 12:34:47 UTC
Confirmed.

Version: 5.5.0.0.alpha0+
Build ID: 59c9d0653cc42560af48269bb8dee2c2b0b20f68
CPU threads: 2; OS: Linux 4.4; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-06-06_23:50:05
Locale: en-US (en_US.UTF-8); Calc: group
Comment 9 Viktor Mileikovskyi 2019-08-22 06:55:12 UTC
LibreOffice 6.3.0.4 (build 1:6.3.0-0ubuntu0.18.04.1~lo2) on LUbuntu 18.04 never displays the progress of openning or saving. The empty progressbar appears until the saving will finish.

Tested on kernels: 5.2.0-9.1-liquorix-amd64 and 4.15.0-58-generic.

The information in Help->About 
Cores: 4; OS: Linux 5.2; ІК: set; VCL: gtk3; 
Locale: uk-UA (uk_UA.UTF-8); the language of ІК: uk-UA
Calc: threaded

Terminal output is empty.
Comment 10 Jan-Marek Glogowski 2019-08-22 12:42:17 UTC
(In reply to Viktor Mileikovskyi from comment #9)
> LibreOffice 6.3.0.4 (build 1:6.3.0-0ubuntu0.18.04.1~lo2) on LUbuntu 18.04
> never displays the progress of openning or saving. The empty progressbar
> appears until the saving will finish.
> 
> Tested on kernels: 5.2.0-9.1-liquorix-amd64 and 4.15.0-58-generic.
> 
> The information in Help->About 
> Cores: 4; OS: Linux 5.2; ІК: set; VCL: gtk3; 
> Locale: uk-UA (uk_UA.UTF-8); the language of ІК: uk-UA
> Calc: threaded
> 
> Terminal output is empty.

Please open a new bug report. This bug is more then two years old and all the comments are quite probably bogus for the new bug. But feel free to link this bug from the "See also" field of the new report, or just mention it in the new bug report itself.