tdf#104482 Force updating progress bar on safe

I don't know why the progress bar on load is handled differently
then on safe. As a workaround, this converts all Flush() calls
to Update() calls, but we should update the UI on safe correctly.

Change-Id: I97d6fc5797d08e9556f7fa7f9f8110aef30b3772