vcl/source/window/status.cxx
@@ -1158,7 +1158,7 @@ void StatusBar::SetItemText( sal_uInt16 nItemId, const OUString& rText )
             {
                 Rectangle aRect = ImplGetItemRectPos(nPos);
                 Invalidate(aRect);
-                Flush();
+                Update();
             }
         }
     }
@@ -1211,7 +1211,7 @@ void StatusBar::SetItemData( sal_uInt16 nItemId, void* pNewData )
         {
             Rectangle aRect = ImplGetItemRectPos(nPos);
             Invalidate(aRect, InvalidateFlags::NoErase);
-            Flush();
+            Update();
         }
     }
 }
@@ -1241,7 +1241,7 @@ void StatusBar::RedrawItem(sal_uInt16 nItemId)
     {
         Rectangle aRect = ImplGetItemRectPos(nPos);
         Invalidate(aRect);
-        Flush();
+        Update();
     }
 }
 
@@ -1333,7 +1333,7 @@ void StatusBar::StartProgressMode( const OUString& rText )
     if ( IsReallyVisible() )
     {
         Invalidate();
-        Flush();
+        Update();
     }
 }
 
@@ -1348,7 +1348,7 @@ void StatusBar::SetProgressValue( sal_uInt16 nNewPercent )
     {
         bool bNeedErase = ImplGetSVData()->maNWFData.mbProgressNeedsErase;
         Invalidate(maPrgsFrameRect, bNeedErase ? InvalidateFlags::NONE : InvalidateFlags::NoErase);
-        Flush();
+        Update();
     }
     mnPercent = nNewPercent;
 }
@@ -1363,7 +1363,7 @@ void StatusBar::EndProgressMode()
     if ( IsReallyVisible() )
     {
         Invalidate();
-        Flush();
+        Update();
     }
 }
 
@@ -1380,7 +1380,7 @@ void StatusBar::SetText(const OUString& rText)
         {
             Invalidate();
             Window::SetText(rText);
-            Flush();
+            Update();
         }
     }
     else if (mbProgressMode)
@@ -1389,7 +1389,7 @@ void StatusBar::SetText(const OUString& rText)
         if (IsReallyVisible())
         {
             Invalidate();
-            Flush();
+            Update();
         }
     }
     else
